--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
-<head>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
-</head>
-<body>
-  <div id="player"></div>
-  <script>
-    var player = new Clappr.Player({source: "https://cdn-06.anonfiles.com/b2l62159oc/d60fb89e-1591594959/Exponiendo%20a%20la%20Federaci%C3%B3n%20Gal%C3%A1ctica%20-%20Raza%20Taygeteana%20de%20las%20Pleyades-rwBygte593Y.mp4", parentId: "#player"});
-  </script>
-</body>
+<html><head><meta charset="UTF-8"><title></title><style>
+ header img{width:10%;}
+ header img:hover{opacity:85%;}
+ content a{text-decoration:none;color:#000;font-family:Arial,Helvetica,sans-serif;padding-bottom:5px;}
+ content a:hover{color:#f0f0f0;}
+ content hr{border-color:#ffffff;opacity:25%;}
+ content h1, content p{display:inline;padding:10px;}
+ .menu{display:inline;}
+ .menu img{width:5%;float:right;margin:10px;}
+ .menu img:hover{opacity:50%;}
+</style></head><body><header><a href="/"><img src="https://i.imgur.com/xh3zlin.png"></a><div class="menu">
+ <a href="#"><img src="https://i.imgur.com/bQMwr7P.png"></a>
+ <a href="#"><img src="https://i.imgur.com/O8RRgR3.png"></a>
+</div></header><content>
+ <hr><a href="#"><h1>WinRAR</h1><p>Aqui suena la Katy Perry</p></a>
+ <hr><a href="#"><h1>WinRAR</h1><p>Aqui suena la Katy Perry</p></a>
+ <hr><a href="#"><h1>WinRAR</h1><p>Aqui suena la Katy Perry</p></a>
+ <hr><a href="#"><h1>WinRAR</h1><p>Aqui suena la Katy Perry</p></a>
+ <hr><a href="#"><h1>WinRAR</h1><p>Aqui suena la Katy Perry</p></a>
+ <hr><a href="#"><h1>WinRAR</h1><p>Aqui suena la Katy Perry</p></a>
+</content></body></html>
