--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
  <a href="#"><img src="https://i.imgur.com/bQMwr7P.png"></a>
  <a href="#"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
- <hr><a href="fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor para archivos de audio.</p></a>
- <hr><a href="notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
- <hr><a href="gimp.org/downloads/"><h1>Gimp</h1><p>Editor para archivos de imagen.</p></a>
- <hr><a href="obsproject.com/download"><h1>OBS</h1><p>Programa de grabación y retransmisión.</p></a>
- <hr><a href="t.me/s/SMLoadrNews"><h1>SMLoadr</h1><p>Descargador de Deezer.</p></a>
- <hr><a href="videolan.org/vlc/download-windows.html"><h1>VLC</h1><p>Reprodroductor multimedia.</p></a>
-  <hr><a href="mrs0m30n3.github.io/youtube-dl-gui/"><h1>YouTube-dl</h1><p>Descargador de YouTube.</p></a>
+ <hr><a href="//fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor para archivos de audio.</p></a>
+ <hr><a href="//notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
+ <hr><a href="//gimp.org/downloads/"><h1>Gimp</h1><p>Editor para archivos de imagen.</p></a>
+ <hr><a href="//obsproject.com/download"><h1>OBS</h1><p>Programa de grabación y retransmisión.</p></a>
+ <hr><a href="//t.me/s/SMLoadrNews"><h1>SMLoadr</h1><p>Descargador de Deezer.</p></a>
+ <hr><a href="//videolan.org/vlc/download-windows.html"><h1>VLC</h1><p>Reprodroductor multimedia.</p></a>
+  <hr><a href="//mrs0m30n3.github.io/youtube-dl-gui/"><h1>YouTube-dl</h1><p>Descargador de YouTube.</p></a>
 </content></body></html>
