--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head><title></title><style>
  header img{width:10%;}
  header img:hover{opacity:85%;}
- content a{text-decoration:none;color:#000;font-family:Arial,Helvetica,sans-serif;padding-bottom:5px;}
+ content a{text-decoration:none;color:#000;font-size:12px;font-family:Arial,Helvetica,sans-serif;padding-bottom:5px;}
  content a:hover{color:#f0f0f0;}
  content hr{border-color:#ffffff;opacity:25%;}
  content h1, content p{display:inline;padding:10px;}
