--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  content hr{border-color:#ffffff;opacity:25%;}
  content h1, content p{display:inline;padding:10px;}
  .menu{display:inline;}
- .menu img{width:5%;float:right;margin:10px;}
+ .menu img{width:4%;margin:10px;}
  .menu img:hover{opacity:50%;}
 </style></head><body><header><a href="/"><img src="https://i.imgur.com/xh3zlin.png"></a><div class="menu">
  <a href="#"><img src="https://i.imgur.com/bQMwr7P.png"></a>
