--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  header img{width:170px;}
  header img:hover{opacity:85%;}
  content a{text-decoration:none;color:#000;font-family:Arial,Helvetica,sans-serif;padding-bottom:5px;}
- content a:hover{color:#f0f0f0;}
+ content a:hover{color:#757575;}
  content hr{border-color:#ffffff;opacity:25%;}
  content h1, content p{display:inline;padding:10px;}
  .menu{display:inline;}
