--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html><head><title></title><style>
  header img{width:170px;}
  header img:hover{opacity:80%;}
- content a{text-decoration:none;color:#777;font-family:Arial,Helvetica,sans-serif;padding-bottom:5px;}
+ content a{text-decoration:none;color:#777;font-family:Arial,Helvetica,sans-serif;padding:15px;}
  content a:hover{color:#111;}
  content hr{border-color:#ffffff;opacity:50%;}
  content h1, content p{display:inline;padding:10px;}
- .menu{display:inline;}
- .menu img{width:70px;margin:10px;}
+ .menu{display:inline;float:right;}
+ .menu img{width:70px;padding:40px;}
  .menu img:hover{opacity:50%;}
 </style></head><body><header><a href="/"><img src="https://i.imgur.com/xh3zlin.png"></a><div class="menu">
  <a href="#"><img src="https://i.imgur.com/bQMwr7P.png"></a>
