--- a/multimedia/vegas/index.html
+++ b/multimedia/vegas/index.html
@@ -13,7 +13,7 @@
  <a href="#"><img src="https://i.imgur.com/bQMwr7P.png"></a>
  <a href="/multimedia"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
- <hr><a href="./"><h1>←</h1><p>Volver</p></a>
- <hr><a href="#"><h1>Vegas Pro 13</h1><p>32bits</p></a>
- <hr><a href="//anonfiles.com/n7Y3qcE6o6/vegaspro13-64bit_exe"><h1>Vegas Pro 13</h1><p>64bits</p></a>
+ <hr><a href="../"><h2>← Volver</h2></a>
+ <hr><a href="#"><h1>Vegas Pro 13</h1><p>32 bits</p></a>
+ <hr><a href="//anonfiles.com/n7Y3qcE6o6/vegaspro13-64bit_exe"><h1>Vegas Pro 13</h1><p>64 bits</p></a>
 </content></body></html>
