--- a/multimedia/vegas/index.html
+++ b/multimedia/vegas/index.html
@@ -4,7 +4,7 @@
  content a{text-decoration:none;color:#777;font-family:Arial,Helvetica,sans-serif;padding:15px;}
  content a:hover{color:#111;}
  content hr{border-color:#ffffff;opacity:50%;}
- content h1, content p{display:inline;padding:10px;}
+ content h1, h2, content p{display:inline;padding:10px;}
  content p{font-size:13px;}
  .menu{display:inline;float:right;}
  .menu img{width:70px;padding:40px;}
@@ -15,5 +15,5 @@
 </div></header><content>
  <hr><a href="../"><h2>← Volver</h2></a>
  <hr><a href="#"><h1>Vegas Pro 13</h1><p>32 bits</p></a>
- <hr><a href="//anonfiles.com/n7Y3qcE6o6/vegaspro13-64bit_exe"><h1>Vegas Pro 13</h1><p>64 bits</p></a>
+ <hr><a href="//anonfiles.com/n7Y3qcE6o6/vegaspro13-64bit_exe"><h1>*** Pro 13</h1><p>64 bits</p></a>
 </content></body></html>
