--- a/multimedia/index.html
+++ b/multimedia/index.html
@@ -4,14 +4,14 @@
  content a{text-decoration:none;color:#777;font-family:Arial,Helvetica,sans-serif;padding:15px;}
  content a:hover{color:#111;}
  content hr{border-color:#ffffff;opacity:50%;}
- content h1, content p{display:inline;padding:10px;}
+ content h1, content p, h3{display:inline;padding:10px;}
  content p{font-size:13px;}
  .menu{display:inline;float:right;}
  .menu img{width:70px;padding:40px;}
  .menu img:hover{opacity:50%;}
 </style></head><body><header><a href="/"><img src="https://i.imgur.com/xh3zlin.png"></a><div class="menu">
- <a href="#"><img src="https://i.imgur.com/bQMwr7P.png"></a>
- <a href="/multimedia"><img src="https://i.imgur.com/O8RRgR3.png"></a>
+ <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
+ <a href="#"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
  <hr><a href="//fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor de audio.</p></a>
  <hr><a href="//notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
@@ -19,8 +19,8 @@
  <hr><a href="//gimp.org/downloads/"><h1>Gimp</h1><p>Editor de imagenes.</p></a>
  <hr><a href="//obsproject.com/download"><h1>OBS</h1><p>Programa de grabación y retransmisión.</p></a>
  <hr><a href="//t.me/s/SMLoadrNews"><h1>SMLoadr</h1><p>Descargador de Deezer.</p></a>
- <hr><a href="/multimedia/vegas/"><h1>> Sony Vegas</h1><p>Editor de vídeo.</p></a>
+ <hr><a href="/multimedia/vegas/"><h1>- Vegas</h1><p>Editor de vídeo.</p></a>
  <hr><a href="//videolan.org/vlc/download-windows.html"><h1>VLC</h1><p>Reproductor multimedia.</p></a>
- <hr><a href="/multimedia/vocaloid/"><h1>> Vocaloid</h1><p>Síntesis de voz musical.</p></a>
+ <hr><a href="/multimedia/vocaloid/"><h1>- Vocaloid</h1><p>Síntesis de voz musical.</p></a>
  <hr><a href="//mrs0m30n3.github.io/youtube-dl-gui/"><h1>YouTube-dl</h1><p>Descargador de YouTube.</p></a>
 </content></body></html>
