--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
  content a{text-decoration:none;color:#777;font-family:Arial,Helvetica,sans-serif;padding:15px;}
  content a:hover{color:#111;}
  content hr{border-color:#ffffff;opacity:50%;}
- content h1, content p{display:inline;padding:10px;}
+ content h1, content p, h3{display:inline;padding:10px;}
  content p{font-size:13px;}
  .menu{display:inline;float:right;}
  .menu img{width:70px;padding:40px;}
  .menu img:hover{opacity:50%;}
 </style></head><body><header><a href="/"><img src="https://i.imgur.com/xh3zlin.png"></a><div class="menu">
- <a href="#"><img src="https://i.imgur.com/bQMwr7P.png"></a>
- <a href="/multimedia"><img src="https://i.imgur.com/O8RRgR3.png"></a>
+ <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
+ <a href="#"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
  <hr><a href="//fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor de audio.</p></a>
  <hr><a href="//notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
