--- a/multimedia/vegas/index.html
+++ b/multimedia/vegas/index.html
@@ -14,6 +14,14 @@
  <a href="#"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
  <a href="../"><h3>← Volver</h3></a>
- <hr><a href="#"><h1>Vegas Pro 13</h1><p>32 bits</p></a>
- <hr><a href="//anonfiles.com/n7Y3qcE6o6/vegaspro13-64bit_exe"><h1>Vegas Pro 13</h1><p>64 bits</p></a>
+ <hr><a href="#"><h1>Vegas Pro 13</h1><p>32 bits.</p></a>
+ <hr><a href="//anonfiles.com/n7Y3qcE6o6/vegaspro13-64bit_exe"><h1>Vegas Pro 13</h1><p>64 bits.</p></a>
+ <hr><a href="#"><h1>Vegas Pro 14</h1><p>32 bits.</p></a>
+ <hr><a href="#"><h1>Vegas Pro 14</h1><p>64 bits.</p></a>
+ <hr><a href="#"><h1>Vegas Pro 15</h1><p>32 bits.</p></a>
+ <hr><a href="#"><h1>Vegas Pro 15</h1><p>64 bits.</p></a>
+ <hr><a href="#"><h1>Vegas Pro 16</h1><p>32 bits.</p></a>
+ <hr><a href="#"><h1>Vegas Pro 16</h1><p>64 bits.</p></a>
+ <hr><a href="#"><h1>Vegas Pro 17</h1><p>32 bits.</p></a>
+ <hr><a href="#"><h1>Vegas Pro 17</h1><p>64 bits.</p></a>
 </content></body></html>
