--- a/multimedia/vocaloid/index.html
+++ b/multimedia/vocaloid/index.html
@@ -17,4 +17,5 @@
  <hr><a href="//anonfiles.com/lbn0r9E8of/vocaloideditor420_exe"><h1>Vocaloid 4</h1><p>Editor de voces.</p></a>
  <hr><a href="#"><h1>Bruno</h1><p>Voz masculina en español.</p></a>
  <hr><a href="#"><h1>María</h1><p>Voz femenina en español.</p></a>
+ <hr><a href="#"><h1>Hatsune Miku</h1><p>Voz femenina.</p></a>
 </content></body></html>
