--- a/multimedia/vocaloid/index.html
+++ b/multimedia/vocaloid/index.html
@@ -15,7 +15,8 @@
 </div></header><content>
  <a href="../"><h3>← Volver</h3></a>
  <hr><a href="//anonfiles.com/lbn0r9E8of/vocaloideditor420_exe"><h1>Vocaloid 4</h1><p>Editor de voces.</p></a>
- <hr><a href="#"><h1>Bruno</h1><p>Voz masculina en español.</p></a>
- <hr><a href="#"><h1>María</h1><p>Voz femenina en español.</p></a>
+  <hr><a href="//"><h1>Vocaloid 5</h1><p>Editor de voces 64 bits.</p></a>
+ <hr><a href="//anonfiles.com/Fax5r2E5o3/Bruno_exe"><h1>Bruno</h1><p>Voz masculina en español.</p></a>
+ <hr><a href="//anonfiles.com/n3x7r9E3o9/Clara_exe"><h1>Clara</h1><p>Voz femenina en español.</p></a>
  <hr><a href="#"><h1>Hatsune Miku</h1><p>Voz femenina.</p></a>
 </content></body></html>
