--- a/multimedia/vocaloid/index.html
+++ b/multimedia/vocaloid/index.html
@@ -14,9 +14,13 @@
  <a href="#"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
  <a href="../"><h3>← Volver</h3></a>
- <hr><a href="//anonfiles.com/lbn0r9E8of/vocaloideditor420_exe"><h1>Vocaloid 4</h1><p>Editor de voces.</p></a>
-  <hr><a href="//"><h1>Vocaloid 5</h1><p>Editor de voces 64 bits.</p></a>
+ <hr><a href="//anonfiles.com/9fxdscEdo7/V3_3.2.1.0_exe"><h1>Vocaloid 3.2.1</h1><p>Editor de voces.</p></a>
+ <hr><a href="//anonfiles.com/lbn0r9E8of/vocaloideditor420_exe"><h1>Vocaloid 4.2.0</h1><p>Editor de voces.</p></a>
+ <hr><a href="//"><h1>Vocaloid 4.3.0</h1><p>Editor de voces.</p></a>
+ <hr><a href="//"><h1>Vocaloid 5.0.1</h1><p>Editor de voces.</p></a>
+ <hr><a href="//anonfiles.com/n3D3r5E0o4/vocaloideditor541_exe"><h1>Vocaloid 5.4.1</h1><p>Editor de voces.</p></a>
+ <hr><a href="//"><h1>Vocaloid 5.5.0</h1><p>Editor de voces.</p></a>
  <hr><a href="//anonfiles.com/Fax5r2E5o3/Bruno_exe"><h1>Bruno</h1><p>Voz masculina en español.</p></a>
  <hr><a href="//anonfiles.com/n3x7r9E3o9/Clara_exe"><h1>Clara</h1><p>Voz femenina en español.</p></a>
- <hr><a href="#"><h1>Hatsune Miku</h1><p>Voz femenina.</p></a>
+ <hr><a href="#"><h1>Maika</h1><p>Voz femenina en español.</p></a>
 </content></body></html>
