--- a/multimedia/vocaloid/index.html
+++ b/multimedia/vocaloid/index.html
@@ -17,10 +17,10 @@
  <hr><a href="//anonfiles.com/9fxdscEdo7/V3_3.2.1.0_exe"><h1>Vocaloid 3.2.1</h1><p>Editor de voces.</p></a>
  <hr><a href="//anonfiles.com/lbn0r9E8of/vocaloideditor420_exe"><h1>Vocaloid 4.2.0</h1><p>Editor de voces.</p></a>
  <hr><a href="//anonfiles.com/Z193seE7oc/V4FE_4.3.0_exe"><h1>Vocaloid 4.3.0</h1><p>Editor de voces.</p></a>
- <hr><a href="//"><h1>Vocaloid 5.0.1</h1><p>Editor de voces.</p></a>
+ <hr><a href="//anonfiles.com/L7R5s3E5o3/5.0.1_exe"><h1>Vocaloid 5.0.1</h1><p>Editor de voces.</p></a>
  <hr><a href="//anonfiles.com/n3D3r5E0o4/vocaloideditor541_exe"><h1>Vocaloid 5.4.1</h1><p>Editor de voces.</p></a>
- <hr><a href="//"><h1>Vocaloid 5.5.0</h1><p>Editor de voces.</p></a>
+ <hr><a href="//anonfiles.com/34S0sbEaod/5.5.0_exe"><h1>Vocaloid 5.5.0</h1><p>Editor de voces.</p></a>
  <hr><a href="//anonfiles.com/Fax5r2E5o3/Bruno_exe"><h1>Bruno</h1><p>Voz masculina en español.</p></a>
  <hr><a href="//anonfiles.com/n3x7r9E3o9/Clara_exe"><h1>Clara</h1><p>Voz femenina en español.</p></a>
- <hr><a href="#"><h1>Maika</h1><p>Voz femenina en español.</p></a>
+ <hr><a href="//anonfiles.com/J0Tfs4E1of/MAIKA_exe"><h1>Maika</h1><p>Voz femenina en español.</p></a>
 </content></body></html>
