--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  .menu img:hover{opacity:50%;}
 </style></head><body><header><a href="/"><img src="https://i.imgur.com/xh3zlin.png"></a><div class="menu">
  <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
- <a href="#"><img src="https://i.imgur.com/O8RRgR3.png"></a>
+ <a href="/juegos"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
  <hr><a href="//fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor de audio.</p></a>
  <hr><a href="//notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
