--- a/multimedia/vegas/index.html
+++ b/multimedia/vegas/index.html
@@ -11,7 +11,7 @@
  .menu img:hover{opacity:50%;}
 </style></head><body><header><a href="/"><img src="https://i.imgur.com/xh3zlin.png"></a><div class="menu">
  <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
- <a href="#"><img src="https://i.imgur.com/O8RRgR3.png"></a>
+ <a href="/juegos"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
  <a href="../"><h3>← Volver</h3></a>
  <hr><a href="#"><h1>Vegas Pro 13</h1><p>32 bits.</p></a>
