--- a/juegos/index.html
+++ b/juegos/index.html
@@ -13,7 +13,8 @@
  <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
  <a href="/juegos"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
- <hr><a href=""><h1>Grand Theft Auto San Andreas</h1><p>Plataformero de un jugador.</p></a>
+ <a href="../"><h3>← Volver</h3></a>
+ <hr><a href="/juegos/gtasa"><h1>- Grand Theft Auto San Andreas</h1><p>Sandbox.</p></a>
  <hr><a href="//anonfiles.com/X3F6w9E2of/DVD_iso"><h1>I-Ninja</h1><p>Plataformero de un jugador.</p></a>
- <hr><a href="../minecraft"><h1>- Minecraft</h1><p>Sandbox.</p></a>
+ <hr><a href="/juegos/minecraft"><h1>- Minecraft</h1><p>Sandbox.</p></a>
 </content></body></html>
