--- a/juegos/index.html
+++ b/juegos/index.html
@@ -17,5 +17,5 @@
  <hr><a href="/juegos/gtasa"><h1>- Grand Theft Auto San Andreas</h1><p>Sandbox.</p></a>
  <hr><a href="//anonfiles.com/X3F6w9E2of/DVD_iso"><h1>I-Ninja</h1><p>Plataformero de un jugador.</p></a>
  <hr><a href="/juegos/minecraft"><h1>- Minecraft</h1><p>Sandbox.</p></a>
- <hr><a href="//openarena.ws/download.php?view.4"><h1>Openarena</h1><p>FPS (Quake3).</p></a>
+ <hr><a href="//openarena.ws/download.php?view.4"><h1>OpenArena</h1><p>FPS (Quake3).</p></a>
 </content></body></html>
