--- a/juegos/gtasa/index.html
+++ b/juegos/gtasa/index.html
@@ -13,7 +13,7 @@
  <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
  <a href="/juegos"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
- <a href="../"><h3>← Volver</h3></a>
+ <a href="./"><h3>← Volver</h3></a>
  <hr><a href="//anonfiles.com/9fxdscEdo7/V3_3.2.1.0_exe"><h1>GTA - San Andreas</h1><p>Juego.</p></a>
  <hr><a href="//cookieplmonster.github.io/mods/gta-sa/"><h1>Silent Patch</h1><p>Parches para bugs.</p></a>
  <hr><a href="//www.sa-mp.com/download.php"><h1>SAMP</h1><p>Mod Multijugador.</p></a>
