--- a/juegos/minecraft/index.html
+++ b/juegos/minecraft/index.html
@@ -13,7 +13,7 @@
  <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
  <a href="/juegos"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
- <a href="../"><h3>← Volver</h3></a>
+ <a href="./"><h3>← Volver</h3></a>
  <hr><a href="//teamshiginima.com/update/"><h1>Shiginima</h1><p>Launcher ligero.</p></a>
  <hr><a href="//tlauncher.org/"><h1>TLauncher</h1><p>Launcher completo.</p></a>
  <hr><a href="//optifine.net/downloads"><h1>Optifine</h1><p>Mod de optimización.</p></a>
