--- a/multimedia/index.html
+++ b/multimedia/index.html
@@ -10,6 +10,7 @@
  .menu img{width:70px;padding:40px;}
  .menu img:hover{opacity:50%;}
 </style></head><body><header><a href="/"><img src="https://i.imgur.com/xh3zlin.png"></a><div class="menu">
+ <a href="/herramientas"><img src="https://i.imgur.com/u6ZyZTF.png"></a>
  <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
  <a href="/juegos"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
