--- a/index.html
+++ b/index.html
@@ -14,14 +14,35 @@
  <a href="/multimedia"><img src="https://i.imgur.com/bQMwr7P.png"></a>
  <a href="/juegos"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
+ <hr><a href="//www.7-zip.org/a"><h1>7zip</h1><p>Compresor de ficheros.</p></a>
  <hr><a href="//fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor de audio.</p></a>
+ <hr><a href="//brave.com/cut156"><h1>Brave</h1><p>Navegador Chromium.</p></a>
  <hr><a href="//notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
+ <hr><a href="//filezilla-project.org/download.php"><h1>FileZilla</h1><p>Cliente FTP.</p></a>
  <hr><a href="//anonfiles.com/h293qcE9o9/Fraps_3.5.99_Build_15618_exe"><h1>Fraps</h1><p>Programa de grabación.</p></a>
  <hr><a href="//download.gimp.org/mirror/pub/gimp/"><h1>Gimp</h1><p>Editor de imagenes.</p></a>
+ <hr><a href="/juegos/gtasa"><h1>- Grand Theft Auto San Andreas</h1><p>Sandbox.</p></a>
+ <hr><a href="//anonfiles.com/X3F6w9E2of/DVD_iso"><h1>I-Ninja</h1><p>Plataformero de un jugador.</p></a>
+ <hr><a href="//www.java.com/es/download/manual.jsp"><h1>Java</h1><p>Máquina virtual.</p></a>
+ <hr><a href="//codecguide.com/download_kl.htm"><h1>K-Lite</h1><p>Paquete de codecs.</p></a>
+ <hr><a href="//t.me/s/RatiborusKMSTools"><h1>KMSTools</h1><p>MS-KMS.</p></a>
+ <hr><a href="//anonfiles.com/j4KfxaEeo0/Kon-Boot_2in1_WinOS_MacOS_v2.7_zip"><h1>Kon-Boot</h1><p>MS/MAC Pass-Bypass.</p></a>
+ <hr><a href="/juegos/minecraft"><h1>- Minecraft</h1><p>Sandbox.</p></a>
+ <hr><a href="//github.com/notepad-plus-plus/notepad-plus-plus/releases/"><h1>Notepad++</h1><p>Editor de texto plano.</p></a>
  <hr><a href="//obsproject.com/download"><h1>OBS</h1><p>Programa de grabación y retransmisión.</p></a>
+ <hr><a href="//openarena.ws/download.php?view.4"><h1>OpenArena</h1><p>FPS (Quake3).</p></a>
+ <hr><a href="//chiark.greenend.org.uk/~sgtatham/putty/latest.html"><h1>PuTTY</h1><p>Cliente SSH.</p></a>
+ <hr><a href="//www.qbittorrent.org/download.php"><h1>qBittorrent</h1><p>Cliente Torrent.</p></a>
+ <hr><a href="//github.com/pbatard/rufus/releases/"><h1>Rufus</h1><p>Quemador ISO a USB.</p></a>
  <hr><a href="//t.me/s/SMLoadrNews"><h1>SMLoadr</h1><p>Descargador de Deezer.</p></a>
+ <hr><a href="//github.com/transmission/transmission-releases/"><h1>Transmission</h1><p>Cliente Torrent.</p></a>
+ <hr><a href="//anonfiles.com/zdM0x6E5o5/Microsoft_Visual_C_Pack_v4.9_Repack_exe"><h1>vcredist C++</h1><p>Paquete de librerías.</p></a>
  <hr><a href="/multimedia/vegas/"><h1>- Vegas</h1><p>Editor de vídeo.</p></a>
+ <hr><a href="//vivaldi.com/es/download/"><h1>Vivaldi</h1><p>Navegador Chromium.</p></a>
  <hr><a href="//get.videolan.org/vlc/last/"><h1>VLC</h1><p>Reproductor multimedia.</p></a>
  <hr><a href="/multimedia/vocaloid/"><h1>- Vocaloid</h1><p>Síntesis de voz musical.</p></a>
+ <hr><a href="//github.com/sysprogs/WinCDEmu/releases/"><h1>WinCDEmu</h1><p>Disquetera virtual.</p></a>
+ <hr><a href="//github.com/filemanualis/WinRAR/releases"><h1>WinRar</h1><p>Compresor de ficheros.</p></a>
+ <hr><a href="//anonfiles.com/T5P9x5E8o8/Xpadder_exe"><h1>Xpadder</h1><p>Mapeador para mandos.</p></a>
  <hr><a href="//mrs0m30n3.github.io/youtube-dl-gui/"><h1>YouTube-dl</h1><p>Descargador de YouTube.</p></a>
 </content></body></html>
