--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  <a href="/juegos"><img src="https://i.imgur.com/O8RRgR3.png"></a>
 </div></header><content>
  <hr><a href="//www.7-zip.org/a"><h1>7zip</h1><p>Compresor de ficheros.</p></a>
+ //sdi-tool.org/releases/?C=M;O=D
  <hr><a href="//fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor de audio.</p></a>
  <hr><a href="//brave.com/cut156"><h1>Brave</h1><p>Navegador Chromium.</p></a>
  <hr><a href="//notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
@@ -34,6 +35,7 @@
  <hr><a href="//chiark.greenend.org.uk/~sgtatham/putty/latest.html"><h1>PuTTY</h1><p>Cliente SSH.</p></a>
  <hr><a href="//www.qbittorrent.org/download.php"><h1>qBittorrent</h1><p>Cliente Torrent.</p></a>
  <hr><a href="//github.com/pbatard/rufus/releases/"><h1>Rufus</h1><p>Quemador ISO a USB.</p></a>
+ <hr><a href="//sdi-tool.org/releases/?C=M;O=D"><h1>SDI-Tool</h1><p>Pack de Drivers.</p></a>
  <hr><a href="//t.me/s/SMLoadrNews"><h1>SMLoadr</h1><p>Descargador de Deezer.</p></a>
  <hr><a href="//github.com/transmission/transmission-releases/"><h1>Transmission</h1><p>Cliente Torrent.</p></a>
  <hr><a href="//anonfiles.com/zdM0x6E5o5/Microsoft_Visual_C_Pack_v4.9_Repack_exe"><h1>vcredist C++</h1><p>Paquete de librerías.</p></a>
