--- a/herramientas/index.html
+++ b/herramientas/index.html
@@ -26,6 +26,7 @@
  <hr><a href="//chiark.greenend.org.uk/~sgtatham/putty/latest.html"><h1>PuTTY</h1><p>Cliente SSH.</p></a>
  <hr><a href="//www.qbittorrent.org/download.php"><h1>qBittorrent</h1><p>Cliente Torrent.</p></a>
  <hr><a href="//github.com/pbatard/rufus/releases/"><h1>Rufus</h1><p>Quemador ISO a USB.</p></a>
+ <hr><a href="//sdi-tool.org/releases/?C=M;O=D"><h1>SDI-Tool</h1><p>Pack de Drivers.</p></a>
  <hr><a href="//github.com/transmission/transmission-releases/"><h1>Transmission</h1><p>Cliente Torrent.</p></a>
  <hr><a href="//anonfiles.com/zdM0x6E5o5/Microsoft_Visual_C_Pack_v4.9_Repack_exe"><h1>vcredist C++</h1><p>Paquete de librerías.</p></a>
  <hr><a href="//vivaldi.com/es/download/"><h1>Vivaldi</h1><p>Navegador Chromium.</p></a>
