--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
  <hr><a href="//fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor de audio.</p></a>
  <hr><a href="//brave.com/cut156"><h1>Brave</h1><p>Navegador Chromium.</p></a>
  <hr><a href="//notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
+ <hr><a href="/multimedia/flstudio"><h1>FL Studio</h1><p>Editor de audio.</p></a>
  <hr><a href="//filezilla-project.org/download.php"><h1>FileZilla</h1><p>Cliente FTP.</p></a>
  <hr><a href="//anonfiles.com/h293qcE9o9/Fraps_3.5.99_Build_15618_exe"><h1>Fraps</h1><p>Programa de grabación.</p></a>
  <hr><a href="//download.gimp.org/mirror/pub/gimp/"><h1>Gimp</h1><p>Editor de imagenes.</p></a>
