--- a/multimedia/index.html
+++ b/multimedia/index.html
@@ -17,6 +17,7 @@
  <a href="../"><h3>← Volver</h3></a>
  <hr><a href="//fosshub.com/Audacity.html"><h1>Audacity</h1><p>Editor de audio.</p></a>
  <hr><a href="//notabug.org/RemixDevs/DeezloaderRemix/wiki/Downloads"><h1>Deezloader</h1><p>Descargador de Deezer.</p></a>
+ <hr><a href="/multimedia/flstudio"><h1>FL Studio</h1><p>Editor de audio.</p></a>
  <hr><a href="//anonfiles.com/h293qcE9o9/Fraps_3.5.99_Build_15618_exe"><h1>Fraps</h1><p>Programa de grabación.</p></a>
  <hr><a href="//download.gimp.org/mirror/pub/gimp/"><h1>Gimp</h1><p>Editor de imagenes.</p></a>
  <hr><a href="//obsproject.com/download"><h1>OBS</h1><p>Programa de grabación y retransmisión.</p></a>
